Fix cutoff on the extended code cells

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -140,7 +140,7 @@
   .CodeMirror {
     .transition-all;
     font-size: 100%;
-    max-width: 960px !important;  /* fix for firefox issue in IPython, 1240px */
+    //max-width: 960px !important;  /* fix for firefox issue in IPython, 1240px */
   }
 
   a.anchor-link { display: none; }
